app/assets/stylesheets/index.scss
.top-section {
  padding: 50px;
  padding-top: 10px;
  box-shadow: 0px 3px 10px #999;
  color: white;

  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#673ab7+0,8065b2+100 */
  background: #673ab7; /* Old browsers */
  background: -moz-linear-gradient(top,  #673ab7 0%, #8065b2 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(top,  #673ab7 0%,#8065b2 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom,  #673ab7 0%,#8065b2 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#673ab7', endColorstr='#8065b2',GradientType=0 ); /* IE6-9 */
}

.loading-section {
  display: none;
}

// Navbar styles
.navbar-default {
  background: none;
  border: none;
}

.nav.navbar-nav.navbar-right li a {
  color: white;
  font-size: 15pt;
}

.navbar-header .navbar-brand {
  color: white;
  font-size: 20pt;
}

.navbar-header .navbar-brand:hover {
  color: white;
}

.lyrics-section {
  display: none;
  padding: 75px 10px;

  .artist {
    span {
      display: inline-block;
      margin-bottom: 0;
      margin-top: 10px;
    }

    span.name {
      font-size: 4em;
      text-transform: capitalize;
      margin-right: 3px;
    }

    span.bot {
      font-size: 3em;
      color: #aaa;
      font-family: sans-serif;
      font-weight: 300;
    }
    @media only screen and (max-width: 700px) and (min-width: 480px){
      span.name {
        font-size: 3em;
      }
      span.bot {
        font-size: 2.5em;
      }
    }

     @media only screen and (max-width: 480px) {
      span.name {
        font-size: 2em;
      }
      span.bot {
        font-size: 1.5em;
      }
    }

    img {
      width: 100px;
      display: block;
      border-radius: 50%;
      display: inline-block;
      margin-right: 25px;
      margin-top: -30px;
    }
  }

  .lyrics {
    font-size: 14pt;
  }

  .encore-button {
    margin: 20px auto;
    margin-top: 35px;
    display: block;

    width: 200px;
    padding: 10px;

    font-size: 25px;

    background-color: #8065b2;
    border: none;
    border-radius: 8px;
    color: white;
  }
  .encore-button:hover {
    background-color: #673ab7;
  }
}

.loader-badge {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-left:-75px;
  margin-top:-75px;
  background-color: #673ab7;
  width: 150px;
  height: 150px;
  border-radius: 50%;
  .icon {
    position: absolute;
    top: 42px;
    left: 36px;
    width: 80px;
  }
}

.logo {
  float: left;
  width: 50px;
  margin-right: 10px;
  margin-top: -5px;
}

.title {
  margin-top: 0px;
  margin-bottom: -5px;
  font-size: 50pt;
  text-align: center;
}

.subtitle {
  font-size: 2.5em;
  text-align: center;
  margin-bottom: 25px;
}

.arrow {
  position: absolute;
  top: 150px;
  background: none;
  border: none;
  outline: none;
}

.arrow-prev {
  left: -100px;
}

.arrow-next {
  right: -100px;
}

.carousel {
  margin-top: 10px;
  overflow-x: hidden;
  box-shadow: inset -10px 0px 10px -5px rgba(0,0,0,0.3), inset 10px 0px 10px -5px rgba(0,0,0,0.2);
}

.artist-tile {
  position: relative;
  margin: 30px auto;
  cursor: pointer;
  text-align: center;

  .overlay {
    position: absolute;
    top: 0px;
    width: 250px;
    height: 100%;
    border-radius: 50%;
    background:rgba(0,0,0,.75);
    text-align:center;
    opacity:0;
    -webkit-transition: opacity .25s
  }

  img {
    margin: 0 auto;
    width: 225px;
    height: auto;
    border-radius: 50%;
    transition: all .3s ease-out;
  }

  img:hover {
    transform: scale(1.05);
    transition: all .2s ease-in;
  }

  p {
    margin: 0 auto;
    padding: 0 35px;
  }

  -webkit-transition: -moz-transform .3s ease-out;
  -moz-transition: -webkit-transform .3s ease-out;
  -o-transition: -o-transform .3s ease-out;
  transition: transform .3s ease-out;
  transform: scale(1);
}

